Enhance fiber logging

--- a/operator/src/main/resources/Operator.properties
+++ b/operator/src/main/resources/Operator.properties
@@ -150,6 +150,7 @@ WLSKO-0196=Stop introspection retry - exceeded configured domainPresenceFailureR
   domainPresenceFailureRetryMaxCount is an operator tuning parameter and can be controlled by adding it to the \
   weblogic-operator-cm configmap. To force the introspector to start retrying again, update 'domain.spec.introspectVersion'.
 WLSKO-0197=Introspection failed on try {0} of {1}.
+WLSKO-0198={0} Fiber {1}
 
 # Domain status messages
 
