revert config file change

--- a/integration-tests/src/test/resources/wdt-models/model.sessmigr.yaml
+++ b/integration-tests/src/test/resources/wdt-models/model.sessmigr.yaml
@@ -7,7 +7,7 @@ domainInfo:
     ServerStartMode: 'prod'
 
 topology:
-    Name: 'DOMAIN_NAME'
+    Name: "wls-sessmigr-domain-1"
     AdminServerName: "admin-server"
     Cluster:
         "cluster-1":
