--- a/operator/src/main/resources/Operator.properties
+++ b/operator/src/main/resources/Operator.properties
@@ -17,7 +17,7 @@ WLSKO-0034=Starting operator liveness Thread
 WLSKO-0035=Could not create operator liveness file /operator/.alive
 WLSKO-0037=The request must contain an ''Authorization'' header whose value is ''Bearer <accessToken>'' where <accessToken> is a Kubernetes access token
 WLSKO-0038=Creating or updating Kubernetes presence for WebLogic Domain with UID: {0}
-WLSKO-0039=Watch event triggered for WebLogic Domain with UID: {0}
+WLSKO-0039=REG-> Watch event triggered for WebLogic Domain with UID: {0}
 WLSKO-0040=Watch event triggered for deletion of WebLogic domain with UID: {0}
 WLSKO-0041=Creating administration server Pod for WebLogic domain with UID: {0}. Administration server name: {1}.
 WLSKO-0042=Replacing administration server Pod for WebLogic domain with UID: {0}. Administration server name: {1}.
